--- a/src/pages/cards/cardInfo/cardInfo.css
+++ b/src/pages/cards/cardInfo/cardInfo.css
@@ -61,7 +61,7 @@
     border-style: dashed;
     border-color:rgb(154, 102, 244);
     margin-bottom: 15px;
-    height: 700px;
+    height: 750px;
   }
   
   .form {
@@ -88,9 +88,10 @@
   .form-inputs {
     margin-bottom: 0.5rem;
     width: 80%;
-    display: flex;
     /* margin-left: 10px; */
-
+  }
+  .form-inputs p{
+    margin-left: -80px;
   }
   
   .form-label {
@@ -105,19 +106,18 @@
     font-size: 0.7rem;
     margin-bottom: 6px;
     color: grey;
-    width: 300px;
+    width: 200px;
   }
   
   .form-input {
-    display: block;
     padding-left: 10px;
-    margin-right: 180px;
     outline: none;
     border-radius: 2px;
     height: 40px;
     width: 80%;
     border-color: grey;
     border-style: solid;
+    margin-left: -80px;
   }
   
   .form-input::placeholder {
@@ -128,7 +128,6 @@
   .form-input-btn {
     width: 300px;
     height: 50px;
-    margin-top: 10px;
     border-radius: 2px;
     background: linear-gradient(
       90deg,
@@ -140,8 +139,8 @@
     color: #fff;
     font-size: 1rem;
     border-radius: 5px;
-    margin-left: auto;
-    margin-top: 30px
+    margin-left: 150%;
+    margin-top: 200px;
   }
   
   .form-input-btn:hover {
@@ -166,6 +165,7 @@
     text-decoration: none;
     color: #27cdff;
     font-weight: 600;
+    margin-left: 0%;
   }
 .card1{
       background-color: rgb(76, 209, 156);
@@ -173,6 +173,8 @@
       width: 300px;
       text-align: center  ;
       color: #fff;
+      
+
   }
 .card2{
     background-color: rgb(249, 216, 221);
@@ -180,6 +182,7 @@
     width: 300px;
     text-align: center;
     color: #fff;
+    margin-left: 100px;
 
 }
 .card3{
@@ -188,9 +191,11 @@
     width: 300px;
     text-align: center;
     color: #fff;
+    margin-left: 100px;
 
 }
 .CardItem{
     display: flex;
-    
+    justify-content: space-between;
+    margin-top: 30px;
 }
